--- a/UI/qtest/ui/testview.ui
+++ b/UI/qtest/ui/testview.ui
@@ -12,7 +12,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>704</width>
+    <width>617</width>
     <height>450</height>
    </rect>
   </property>
@@ -34,27 +34,27 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="sizeConstraint">
-     <enum>QLayout::SetFixedSize</enum>
+     <enum>QLayout::SetDefaultConstraint</enum>
     </property>
     <item>
      <widget class="QFrame" name="frame">
       <property name="minimumSize">
        <size>
-        <width>410</width>
-        <height>372</height>
+        <width>320</width>
+        <height>240</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>410</width>
-        <height>372</height>
+        <width>16000</width>
+        <height>16000</height>
        </size>
       </property>
       <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
+       <enum>QFrame::Panel</enum>
       </property>
       <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
+       <enum>QFrame::Sunken</enum>
       </property>
      </widget>
     </item>
@@ -115,6 +115,9 @@
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Preferred</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -196,7 +199,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>704</width>
+     <width>617</width>
      <height>28</height>
     </rect>
    </property>
